# MuVi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MuviConfig.h  README.md  main.cpp  numpy_fft_test.py
.github/workflows/: cmake.yml  main.yml
lib/: CMakeLists.txt
lib/audio/: CMakeLists.txt
lib/graphics/: CMakeLists.txt
lib/graphics/glad/: gl.c  gl.h
src/: CMakeLists.txt
src/audio/: AudioBuff.h  AudioLoopback.cpp  AudioLoopback.h  AudioLoopbackWorker.cpp  AudioLoopbackWorker.h  CMakeLists.txt
src/fft/: CMakeLists.txt  FftBuff.h  FftCalc.cpp  FftCalc.h  FftWorker.cpp  FftWorker.h  numpy_fft_test.py
src/logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/renderer/: CMakeLists.txt  RendererGraph.cpp  RendererGraph.h  RendererWorker.cpp  RendererWorker.h
src/worker/: AudioLoopbackWorker.cpp  FftWorker.cpp  Worker.h
tools/clang-format/: clang-format.txt
